prover-ray/zkcdriver/testdata/synced/invalid/memory_05.zkc
//error:6:12-17:expected type u16
pub input data(address:u16) -> (word:u16)

fn test(index:u32) -> (r:u16) {
  // write output
  r = data[index]
  // done
  return
}
